Bug 1597916 - Allow frameless containers when dispatching text removed events. r=Jamie

This reverts the change I made in bug 1572811, and instead fixes a much
more narrow case when the inner table frame is mid-construction.

Differential Revision: https://phabricator.services.mozilla.com/D58570